--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,3 +40,14 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          
+    redeploy:
+      name: Redeploy webhook call
+      runs-on: ubuntu-18.04
+      needs: [docker]
+      steps:
+        - name: Deploy docker container webhook
+          uses: joelwmale/webhook-action@master
+          env:
+            WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+            data: "{ 'myField': 'myFieldValue'}"
